yiltc/testsuite/negative/const_not_literal.yilt
// const with a non-literal value (function call) should fail
const x = abs(-1)
